--- a/src/Facebook.NetCore.HttpClient.csproj
+++ b/src/Facebook.NetCore.HttpClient.csproj
@@ -12,7 +12,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageIcon>logo.png</PackageIcon>
     <PackageIconUrl />
-    <Description>An http client to use Facebook Graph API.</Description>
+    <Description>An http client to use the Facebook Graph API.</Description>
+    <PackageTags>facebook api client</PackageTags>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
