corrected error present in docker deployment

--- a/src/Facebook.NetCore.HttpClient.csproj
+++ b/src/Facebook.NetCore.HttpClient.csproj
@@ -26,6 +26,7 @@
     <None Include="Assets/logo.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
